[gd_scene load_steps=6 format=3 uid="uid://cf8py18dhucug"]

[ext_resource type="Script" path="res://Prefabs/UFO/Ufo.gd" id="1_ibmgm"]
[ext_resource type="PackedScene" uid="uid://cqtj81vec172h" path="res://Prefabs/Pixel/PixelGroup.tscn" id="2_6lkqd"]
[ext_resource type="PackedScene" uid="uid://bdr0xhue3cuew" path="res://Prefabs/Pixel/Pixel.tscn" id="3_kkwga"]
[ext_resource type="AudioStream" uid="uid://caf0dwkn5efqb" path="res://Prefabs/UFO/UfoStuff/Sounds/UfoThreat.wav" id="3_t4yu6"]
[ext_resource type="AudioStream" uid="uid://c63pibmw0h1aa" path="res://Prefabs/UFO/UfoStuff/Sounds/UfoDeath.wav" id="4_rko4e"]

[node name="Ufo" type="Node2D" groups=["Ufo"]]
position = Vector2(0, 3)
script = ExtResource("1_ibmgm")
Speed = 50.0

[node name="UfoThreatSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_t4yu6")
autoplay = true

[node name="UfoDeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rko4e")
max_polyphony = 2
panning_strength = 2.0

[node name="UfoPixels" parent="." instance=ExtResource("2_6lkqd")]
position = Vector2(0, -4)
PixelColor = Color(1, 0, 0, 1)
CollisionLayer = 2
CollisionMask = 15

[node name="Pixel50" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-7, -2)

[node name="Pixel51" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-6, -2)

[node name="Pixel52" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(6, -3)

[node name="Pixel53" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-4, -3)

[node name="Pixel54" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-5, -2)

[node name="Pixel55" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(2, -3)

[node name="Pixel56" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(2, -5)

[node name="Pixel27" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(7, -2)

[node name="Pixel26" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(5, -1)

[node name="Pixel25" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(4, -1)

[node name="Pixel24" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(4, 0)

[node name="Pixel23" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(3, -1)

[node name="Pixel22" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(3, -5)

[node name="Pixel21" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(3, -4)

[node name="Pixel58" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(4, -2)

[node name="Pixel59" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(5, -2)

[node name="Pixel60" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(0, -1)

[node name="Pixel61" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(4, -4)

[node name="Pixel62" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(1, -2)

[node name="Pixel63" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(0, -2)

[node name="Pixel64" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(2, -6)

[node name="Pixel65" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(2, -2)

[node name="Pixel66" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(6, -2)

[node name="Pixel67" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-1, -1)

[node name="Pixel68" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-2, -2)

[node name="Pixel69" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-3, -2)

[node name="Pixel20" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(3, -3)

[node name="Pixel19" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(3, -2)

[node name="Pixel18" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-1, -2)

[node name="Pixel17" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-4, -1)

[node name="Pixel16" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-5, 0)

[node name="Pixel70" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-6, -1)

[node name="Pixel71" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-5, -1)

[node name="Pixel72" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-4, -2)

[node name="Pixel57" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-8, -2)

[node name="Pixel80" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-6, -3)

[node name="Pixel81" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-7, -3)

[node name="Pixel82" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(4, -5)

[node name="Pixel83" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-1, -3)

[node name="Pixel84" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-3, -3)

[node name="Pixel85" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(2, -4)

[node name="Pixel86" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(5, -3)

[node name="Pixel91" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(0, -4)

[node name="Pixel92" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(1, -4)

[node name="Pixel103" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-6, -4)

[node name="Pixel104" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(5, -4)

[node name="Pixel105" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(0, -3)

[node name="Pixel106" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-5, -4)

[node name="Pixel107" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-4, -4)

[node name="Pixel108" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-3, -4)

[node name="Pixel124" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-1, -4)

[node name="Pixel125" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(1, -5)

[node name="Pixel126" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-2, -4)

[node name="Pixel127" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(0, -5)

[node name="Pixel128" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-1, -5)

[node name="Pixel129" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-4, -5)

[node name="Pixel130" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-5, -5)

[node name="Pixel148" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-2, -6)

[node name="Pixel151" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-3, -5)

[node name="Pixel152" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-3, -6)

[node name="Pixel170" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-2, -5)

[node name="Pixel174" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(1, -6)

[node name="Pixel192" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(-1, -6)

[node name="Pixel214" parent="UfoPixels" instance=ExtResource("3_kkwga")]
position = Vector2(0, -6)
